.config/waybar/style.css
* {
    /* `otf-font-awesome` and SpaceMono Nerd Font are required to be installed for icons */
    font-family: FontAwesome, "Fira Sans Semibold", Roboto, Helvetica, Arial, sans-serif;
    font-size: 15px;
    transition: background-color .3s ease-out;
}

window#waybar {
    background: rgba(26, 27, 38, 0);
    color: #c0caf5;
    font-family: 
        FontAwesome,
        SpaceMono Nerd Font,
        feather;
    transition: background-color .5s;
}

tooltip {
  border-color: #c0caf5;
  border-width: 2px;
  background-color: rgba(85, 85, 85, 0.5);
  /* backdrop-filter: blur(20px); */
}

.modules-left,
.modules-center,
.modules-right
{
    background: rgba(0, 0, 8, 0);
    margin: 5px 10px;
    padding: 0 5px;
    border-radius: 10px;
}
.modules-left {
    padding: 0;
}
.modules-center {
    padding: 0 10px;
}

#clock,
#battery,
#cpu,
#memory,
#disk,
#temperature,
#backlight,
#network,
#pulseaudio,
#wireplumber,
#custom-media,
#tray,
#mode,
#idle_inhibitor,
#scratchpad,
#power-profiles-daemon,
#language,
#mpd,
#custom-notify,
#cava,
#pulseaudio-slider,
#backlight,
#backlight-slider {
    padding: 0 10px;
    border-radius: 10px;
}

#clock:hover,
#battery:hover,
#cpu:hover,
#memory:hover,
#disk:hover,
#temperature:hover,
#backlight:hover,
#network:hover,
#pulseaudio:hover,
#wireplumber:hover,
#custom-media:hover,
#tray:hover,
#mode:hover,
#idle_inhibitor:hover,
#scratchpad:hover,
#power-profiles-daemon:hover,
#language:hover,
#mpd:hover,
#custom-notify:hover,
#cava:hover,
#pulseaudio-slider:hover,
#backlight:hover,
#backlight-slider:hover {
    background: rgba(255, 255, 255, 0.1);
}

#clock {
    font-size: 16px;
    font-weight: 400;
}

#window {
    font-size: 14px;
    /* font-weight: 400; */
}


#workspaces button {
  background: transparent;
  font-family:
    FontAwesome,
    SpaceMono Nerd Font,
    feather;
  font-weight: 400;
  font-size: 24px;
  color: #6a81e6;
  border:none;
  border-radius: 15px;
  transition: 0.3s ease-in-out;
}

#workspaces button.active {
  /* background: #6262be;  */
  color: #c0caf5;
}

#workspaces button:hover {
  background: #11111b;
  color: #cdd6f4;
  box-shadow: none;
}

#custom-arch {
    margin-left: 5px;
    padding: 0 10px;
    font-size: 25px;
    transition: color .5s;
}
#custom-arch:hover {
    color: #1793d1;
}

#taskbar button {
  margin-left: 2px;
  margin-right: 2px;
  transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
  border: none;
}

#taskbar button.active {
  /* border-top: 2px solid #c0caf5; */
  background: rgba(255, 255, 255, 0.1);
}

#taskbar button:hover {
  /* border-top: 3px solid white; */
  background: rgba(200, 200, 200, 0.3);
  box-shadow: none;
  text-shadow: none;
}

#tray {
  /* border-top: 2px solid #c0caf5; */
  background: rgba(255, 255, 255, 0.1);
  padding-left: 5px;
  padding-right: 8px;
  border-radius: 8px;
}

#tray > * {
  background: transparent;
}

#pulseaudio-slider slider {
  min-height: 0px;
  min-width: 0px;
  opacity: 0;
  background-image: none;
  border: none;
  box-shadow: none;
}
#pulseaudio-slider trough {
  min-height: 10px;
  min-width: 80px;
  border-radius: 5px;
  background-color: transparent;
  border-color: #c0caf5 ;
}
#pulseaudio-slider highlight {
  min-width: 10px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-color: transparent;
  background-color: #c0caf5;
}

#backlight-slider slider {
  min-height: 0px;
  min-width: 0px;
  opacity: 0;
  background-image: none;
  border: none;
  box-shadow: none;
}
#backlight-slider trough {
  min-height: 10px;
  min-width: 80px;
  border-radius: 5px;
  background-color: transparent;
  border-color: #c0caf5 ;
}
#backlight-slider highlight {
  min-width: 10px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-color: transparent;
  background-color: #c0caf5;
}

